Verif/Test/Invalide/test_erreur_3.84-6.deca
// Description:
//    Programme soulevant l'erreur (3.83)
// Resultats:
//    Erreur contextuelle
//    Ligne 19 : Le type 'type_classe(A)' est incompatible avec  l'opérateur unaire '!' (règle 3.84)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

class A{
   void x() {
   }
}
A a;
int var;
{
    var = ! a;
}